<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="230dp">

        <!-- Search Bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp">

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/cari_makanan_favorit_mu"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textColorHint="#757575"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/loupe"
                android:contentDescription="@string/search_icon"
                android:scaleType="fitCenter"
                android:layout_margin="8dp" />

        </LinearLayout>

        <!-- List of Foods -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="16dp">

            <!-- Item 1 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:elevation="2dp">

                <FrameLayout
                    android:layout_width="162dp"
                    android:layout_height="155dp">

                    <!-- Border -->
                    <ImageView
                        android:id="@+id/border_mayo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border"
                        android:contentDescription="@string/todo" />

                    <!-- Elips -->
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="top|center_horizontal"
                        android:background="@drawable/elips"
                        android:src="@drawable/risol_mayo"
                        />

                    <!-- Text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/risol_mayo"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="110dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_2_500"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="125dp" />
                </FrameLayout>
            </LinearLayout>

            <!-- Item 2 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:elevation="2dp">

                <FrameLayout
                    android:layout_width="162dp"
                    android:layout_height="155dp">

                    <!-- Border -->
                    <ImageView
                        android:id="@+id/border_sayur"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border" />

                    <!-- Elips -->
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="top|center_horizontal"
                        android:background="@drawable/elips"
                        android:src="@drawable/risol_sayur" />

                    <!-- Text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/risol_sayur"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="110dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_2_500"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="125dp" />
                </FrameLayout>
            </LinearLayout>

            <!-- Item 3 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:elevation="2dp">

                <FrameLayout
                    android:layout_width="162dp"
                    android:layout_height="155dp">

                    <!-- Border -->
                    <ImageView
                        android:id="@+id/border_ayam"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border" />

                    <!-- Elips -->
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="top|center_horizontal"
                        android:background="@drawable/elips"
                        android:src="@drawable/risol_ayam" />

                    <!-- Text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/risol_ayam"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="110dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_3_000"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="125dp" />
                </FrameLayout>
            </LinearLayout>

            <!-- Item 4 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:elevation="2dp">

                <FrameLayout
                    android:layout_width="162dp"
                    android:layout_height="155dp">

                    <!-- Border -->
                    <ImageView
                        android:id="@+id/border_sosis"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border" />

                    <!-- Elips -->
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="top|center_horizontal"
                        android:background="@drawable/elips"
                        android:src="@drawable/risol_sosis" />

                    <!-- Text -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/risol_sosis"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="110dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_3_000"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="125dp" />
                </FrameLayout>
            </LinearLayout>

        </GridLayout>
    </LinearLayout>
</ScrollView>
